--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.02px;
-    padding-bottom: 0.5rem;
+    padding: 0.8rem;
 }
 .designation {
     font-size: 1rem;
